# nst

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
src/: config.rs  lib.rs  main.rs  metrics.rs  report.rs  socks5.rs
src/server/: bandwidth_server.rs  connection_perf_server.rs  dns_stability_server.rs  main.rs  network_jitter_server.rs  tcp_stability_server.rs
src/tests/: bandwidth.rs  connection_perf.rs  dns_stability.rs  mod.rs  network_jitter.rs  tcp_stability.rs
templates/: report.css
